--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <div class="section">
       <h2>Bot Repositories</h2>
       <div class="button-grid">
-        <a class="button" href="https://github.com/Dare1-0/KELVIN-V4" target="_blank">KELVIN-V4 GitHub Repo</a>
+        <a class="button" href="https://GitHub.com/Dare-1-0/KELVIN-V4" target="_blank">KELVIN-V4 GitHub Repo</a>
         <a class="button" href="https://github.com/Jaden-Afrix/GYNESIS-SITE" target="_blank">GENΞSYS Site GitHub</a>
         <a class="button" href="https://github.com/PRINCETECH20/Prince-bot-md" target="_blank">Prince Bot GitHub Repo</a>
       </div>
